# Otterman

./: READ.ME  README.md  config.py  crud.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py  vendor_shop.db
frontend/: package.json
frontend/src/components/: ErrorHandler.jsx
tests/: test_auth.py  test_search.py  test_shops.py
